# solitaire-crt

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/shaders/: background.wgsl  crt.wgsl
src/: animation.rs  background.rs  cards.rs  deal.rs  game.rs  input.rs  layout.rs  main.rs  menu.rs  post.rs  settings.rs  theme.rs  ui.rs
src/engine/: card.rs  errors.rs  game_state.rs  mod.rs
