[package]
name = "solitaire-crt"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Classic Klondike solitaire in Rust + Bevy with arcade animations and a CRT shader look"
repository = "https://github.com/petkiii/solitaire-crt"

[dependencies]
bevy = "0.19"
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"

[profile.release]
# codegen-units = 1
opt-level = 3
# lto = true
